--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,13 +9,14 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
       PGDATA: /data/postgres
     volumes:
-       - postgres:/data/postgres
+      - $PWD/postgres:/data/postgres
+      - $PWD/postgres-schema.sql:/docker-entrypoint-initdb.d/1-schema.sql
+      - $PWD/postgres-data.sql:/docker-entrypoint-initdb.d/2-data.sql
     ports:
       - "5432:5432"
     networks:
       - postgres
     restart: unless-stopped
-  
   pgadmin:
     container_name: pgadmin_container
     image: dpage/pgadmin4
@@ -23,7 +24,7 @@ services:
       PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-pgadmin4@pgadmin.org}
       PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-admin}
     volumes:
-       - pgadmin:/root/.pgadmin
+       - $PWD/pgadmin:/root/.pgadmin
     ports:
       - "${PGADMIN_PORT:-5050}:80"
     networks:
